--- a/statistics.html
+++ b/statistics.html
@@ -447,7 +447,7 @@
             for (let i = 0; i < 365; i++) {
                 const checkDate = new Date(today);
                 checkDate.setDate(today.getDate() - i);
-                const dateKey = checkDate.toISOString().split('T')[0];
+                const dateKey = FretLogData.formatDateKey(checkDate);
 
                 if (dailyTotals[dateKey] && dailyTotals[dateKey] > 0) {
                     streak++;
@@ -483,7 +483,7 @@
                     for (let i = 0; i < 7; i++) {
                         const date = new Date(weekStart);
                         date.setDate(weekStart.getDate() + i);
-                        const dateKey = date.toISOString().split('T')[0];
+                        const dateKey = FretLogData.formatDateKey(date);
                         labels.push(date.toLocaleDateString('en-US', { weekday: 'short' }));
                         data.push((dailyTotals[dateKey] || 0) / 60000); // Convert to minutes
                     }
@@ -492,7 +492,7 @@
                     for (let i = 29; i >= 0; i--) {
                         const date = new Date(now);
                         date.setDate(now.getDate() - i);
-                        const dateKey = date.toISOString().split('T')[0];
+                        const dateKey = FretLogData.formatDateKey(date);
                         labels.push(date.getDate().toString());
                         data.push((dailyTotals[dateKey] || 0) / 60000);
                     }
@@ -506,7 +506,7 @@
                         for (let j = 0; j < 7; j++) {
                             const date = new Date(weekStart);
                             date.setDate(weekStart.getDate() + j);
-                            const dateKey = date.toISOString().split('T')[0];
+                            const dateKey = FretLogData.formatDateKey(date);
                             weekTotal += dailyTotals[dateKey] || 0;
                         }
                         labels.push(`W${52 - i}`);
